# RL_Snake

./: .gitignore  makefile  pyproject.toml
rl_cell/src/: dqn.py  layer_mapping.py  standard_cell_game.py
rl_cell/utils/: gds_action.py  gds_tools.py
rl_snake/: deep_q_network.py  snake_game.py
rl_snake/src/: deep_q_network.py  load_model_and_play.py
