[tool.poetry]
name = "rl-test"
version = "0.1.0"
description = ""
authors = ["Sean <91415054+sean85120@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.0"
torch = "^2.3.1"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
